include/picsim.h

  /**
   * @brief PICsim pin structure
   *
   * Internal structure used to describe one pin.
   */
  typedef struct
  {
    unsigned char ptype;   ///< @ref pintype
    unsigned char dir;     ///< @ref pindir
    unsigned char value;   ///< value
    unsigned char lvalue;  ///< latch value
    char pord;             ///< pin port number
    unsigned char *port;   ///< port address
    float avalue;          ///< analog input value
    unsigned char ovalue;  ///< defaut open pin value
    float oavalue;         ///< analog output value
    unsigned char lsvalue; ///< last set value (used by open collector simulation)
  } picpin;
  /**
   * @brief PICsim pin structure
   *
   * Internal structure used to describe one pin.
   */
  typedef struct
  {
    unsigned char pin;    ///< pin
    unsigned char ovalue; ///< old value
    unsigned char cap_ps; ///< capture pre scaler
  } ccp_t;
  /**
   * @brief PICsim serial structure
   *
   * Internal structure used to describe one serial connection.
   */
  typedef struct
  {
    // USART
    unsigned char recb;
    int serialc;
    unsigned char txtemp[2];
    char txtc;
    unsigned char RCREG2;
    // serial emulation
    char SERIALDEVICE[100];
    unsigned int serialbaud; // serial baud emulated
    float serialexbaud;      // exac serial baud
#ifdef _WIN_
    HANDLE serialfd;
#else
    int serialfd;
#endif
    int s_open;
    int flowcontrol;
    int ctspin;
    int rtspin;
    unsigned char buff[BUFFMAX];
    int bc;
    unsigned char *serial_TXSTA;
    unsigned char *serial_PIR;
    unsigned char *serial_PIE;
    unsigned char RXIF_mask;
    unsigned char TXIF_mask;
    unsigned char *serial_RCSTA;
    unsigned char *serial_SPBRG;
    unsigned char *serial_SPBRGH;
    unsigned char *serial_BAUDCTL;
    unsigned char *serial_RCREG;
    unsigned char *serial_TXREG;
    unsigned short serial_TXREG_ADDR;
    unsigned short serial_RCSTA_ADDR;
    unsigned short serial_RCREG_ADDR;
    unsigned char *serial_TRIS_RX;
    unsigned char serial_TRIS_RX_MASK;
    bb_uart_t bbuart;
  } _serial;
                     /**@}*/

  extern unsigned char NO_IO[6];
  /**
   @brief PICsim PIC structure

  Structure used to describe pic microcontroller .
   */
  typedef struct _pic _pic;
  struct _pic
  {
    unsigned char print; ///< print information ON/OFF
    unsigned int RAMSIZE;
    unsigned int ROMSIZE;
    unsigned int EEPROMSIZE;
    unsigned int IDSIZE;
    unsigned int CONFIGSIZE;
    unsigned char STACKSIZE;
    unsigned char PINCOUNT;
    unsigned char CCPCOUNT;
    unsigned char ADCCOUNT;
    unsigned char USARTCOUNT;
    unsigned char WDT_MS;
    unsigned char family;   ///< @ref family
    unsigned int processor; ///< @ref procid
    unsigned short debugv[8];
    unsigned char *ram;
    unsigned short *prog;
    unsigned short *id;
    unsigned char *eeprom;
    unsigned short *config;
    unsigned int pc;
    unsigned int jpc;
    unsigned short lram; ///< loaded register
    unsigned short rram; ///< readed register
    unsigned int *stack;
    unsigned char w;
    unsigned char wdt;
    unsigned char s2;
    unsigned long long cycles;
    float freq;          ///< frequency
    unsigned char sleep; ///< sleep mode on
    unsigned char pkg;   ///<  @ref packaging
    picpin *pins;
    unsigned char mclr;
    ccp_t *ccp;
    unsigned char *adc;
    unsigned char *usart_rx;
    unsigned char *usart_tx;
    unsigned char pgc;
    unsigned char pgd;
    unsigned char sck;
    unsigned char sdo;
    unsigned char sdi;
    unsigned char t0cki;
    unsigned char t1cki;
    unsigned char intlv;
    // on chip debbuger
    unsigned char ocd_pgca;
    unsigned char ocd_pgc;
    // periferic
    unsigned char debug;
    unsigned char sstep;
    unsigned char dbg;
    unsigned char frst;
    // timers
    int cp0;
    int cp1;
    int cp2;
    int cp2_;
    int cp3;
    int t2pr;
    // timer input
    unsigned char t0cki_;
    unsigned char t1cki_;
    // interrupt
    unsigned char int0;
    unsigned char int1;
    unsigned char int2;
    // pin value
    unsigned char int0v;
    unsigned char int1v;
    unsigned char int2v;
    // portb int mismatch
    unsigned char portbm;
    // adc
    float vcc; ///< Microcontroller VCC used by ADC
    int adcstep;
    unsigned char adcon1;
    // wdt
    float twdt;
    // eeprom
    int ee_wr;
    // ports
    unsigned char p16latch[5];
    unsigned char porta;
    unsigned char portb;
    unsigned char portc;
    unsigned char portd;
    unsigned char porte;
    unsigned char portf;
    unsigned char portg;
    unsigned char trisa;
    unsigned char trisb;
    unsigned char trisc;
    unsigned char trisd;
    unsigned char trise;
    unsigned char trisf;
    unsigned char trisg;
    unsigned char ioupdated;
    // MSSP
    unsigned char ssp_ck;
    unsigned char ssp_sck;
    unsigned char ssp_scka;
    unsigned char sspsr;
    unsigned char ssp_bit;

    _serial serial[SERIAL_MAX];

    void (*reset)(_pic *pic);
    void (*mmap)(_pic *pic);
    int (*getconf)(_pic *pic, unsigned int);
    void (*disable_debug)(_pic *pic);
    void (*periferic)(_pic *pic);
    int (*interrupt)(_pic *pic);
    void (*stop)(_pic *pic);

    union
    {
      P16map_t P16map;
      P16Emap_t P16Emap;
      P18map_t P18map;
    };
  };
  /**
   * @brief Configure the serial port connection
   *
   *  Use to link the PICSim serial to one serial port
   *
   * @param pic_ pointer to pic object
   * @param nser number of serial
   * @param name Name of serial port
   * @param flowcontrol use flowcontrol
   * @param ctspin  CTS pin if flowcontrol = 1
   * @param rtspin  RTS pin if flowcontrol = 1
   * @return  Return 0 if success, 1 otherwise
   */
  int pic_set_serial(_pic *pic_, int nser, const char *name, int flowcontrol,
                     int ctspin, int rtspin);
  /**
   * @brief Initialize one pic object
   *
   *  Use to initialize the _pic object structure
   *
   * @param pic_ pointer to pic object
   * @param processor microcontroller ID
   * @param fname Name of hex file to load
   * @param leeprom Load EEprom from file if equal to 1
   * @param freq Frequency of microcontoller
   * @return  Return 1 if success, 0 otherwise
   */
  int pic_init(_pic *pic_, int processor, const char *fname, int leeprom,
               float freq);
  /**
   * @brief Reset the microcontroller
   *
   *  Reset the microcontroller to initial state
   *
   * @param flags  0 = WDT reset  1 = Power on reset   -1 = MCLRE pin reset
   * @return Return 1 if success, 0 otherwise
   */
  int pic_reset(_pic *pic_, int flags);
  /**
   * @brief erase the microcontroller FLASH
   *
   */
  void pic_erase_flash(_pic *pic_);
  /**
   * @brief Execute one simulation step
   *
   * Execute one simulation step, must be call continuously to run the program
   * in pic flash memory
   */
  void pic_step(_pic *pic_);
  /**
   * @brief finalize and free pic object internal memory
   *
   */
  void pic_end(_pic *pic_);
  /**
   * @brief Get digital value of one pin
   *
   * @param pin pin number
   * @return pin value 0 or 1
   */
  unsigned char pic_get_pin(_pic *pic_, unsigned char pin);
  /**
   * @brief Set digital value of one pin
   *
   * @param pin pin number
   * @param value pin value 0 or 1
   * @return  Return 1 if success, 0 otherwise
   */
  int pic_set_pin(_pic *pic_, unsigned char pin, unsigned char value);
  /**
   * @brief Set digital value of one pin
   *
   * @param pin pin number
   * @param value pin analog value from 0 to 5
   * @return Return 1 if success, 0 otherwise
   */
  int pic_set_apin(_pic *pic_, unsigned char pin, float value);
  /**
   * @brief Get type of one pin
   *
   * @param pin pin number
   * @return @ref pintype
   */
  unsigned char pic_get_pin_type(_pic *pic_, unsigned char pin);
  /**
   * @brief Get dir of one pin
   *
   * @param pin pin number
   * @return @ref pindir
   */
  unsigned char pic_get_pin_dir(_pic *pic_, unsigned char pin);
  /**
   * @brief Get Default Open Value of one pin (external PULL UP)
   *
   * @param pin pin number
   * @return value 0 or 1
   */
  unsigned char pic_get_pin_DOV(_pic *pic_, unsigned char pin);
  /**
   * @brief Set Default Open Value of one pin (external PULL UP)
   *
   * @param pin pin number
   * @param value pin default value 0 or 1
   * @return Return 1 if success, 0 otherwise
   */
  int pic_set_pin_DOV(_pic *pic_, unsigned char pin, unsigned char value);
  /**
   * @brief Initialize P16 ICSP support
   */
  void pic_icsp_init(_pic *pic_);
  /**
   * @brief Run P16 ICSP (must be pooling)
   * @return Return 1 if success, 0 otherwise
   */
  int pic_icsp(_pic *pic_);
  /**
   * @brief Initialize P18 ICSP support
   */
  void pic_icsp_init18(_pic *pic_);
  /**
   * @brief Run P18 ICSP (must be pooling)
   * @return Return 1 if success, 0 otherwise
   */
  int pic_icsp18(_pic *pic_);
  /**
   * @brief Read HEX file to P16 microcontroller
   *
   * @param fname name of .hex file
   * @param leeprom flag to load or not the microcontroller data eeprom form file
   * @return @ref hexload
   */
  int read_ihx(_pic *pic_, const char *fname, int leeprom);